cmake_minimum_required(VERSION 3.26)
project(DataStructure C)

set(CMAKE_C_STANDARD 99)

add_executable(SqList SqList.c)
add_executable(SLinkLIst SLinkLIst.c)
add_executable(SqStack SqStack.c)
add_executable(ConvD2Base ConvD2Base.c)
add_executable(LinkStack LinkStack.c)
add_executable(BinaryTree BinaryTree.c)
add_executable(CampusNavigation CampusNavigation.c)
add_executable(FlightChecker FlightChecker.c)